--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>website</title>
+    <title>Horiseon</title>
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
@@ -24,8 +24,10 @@
             </ul>
         </nav>
     </header>
-    <div class="hero"></div>
-    <div class="content">
+
+    <section class="hero"></section>
+
+    <section class="content">
         <div class="search-engine-optimization">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
             <h2>Search Engine Optimization</h2>
@@ -47,7 +49,7 @@
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
         </div>
-    </div>
+    </section>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
