--- a/index.html
+++ b/index.html
@@ -27,29 +27,29 @@
 
     <section class="hero"></section>
 
-    <section class="content">
-        <div id="search-engine-optimization" class="horiseon-services">
-            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+    <main>
+        <section id="search-engine-optimization" class="horiseon-services">
+            <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="A laptop, magnifying glass, markers, coffee, and a notebook resting on a tabletop, with images on the notebook cover representing S E O" />
             <h2>Search Engine Optimization</h2>
             <p>
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
-        </div>
-        <div id="online-reputation-management" class="horiseon-services">
-            <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+        </section>
+        <section id="online-reputation-management" class="horiseon-services">
+            <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt="A person sitting at a table with a cellphone in one hand and a laptop in front of them with graphs and the word reputation on the screen" />
             <h2>Online Reputation Management</h2>
             <p>
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
-        </div>
-        <div id="social-media-marketing" class="horiseon-services">
-            <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+        </section>
+        <section id="social-media-marketing" class="horiseon-services">
+            <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt="People sitting around a table holding laptops and tablets. Cartoon images and words like tweet and media are spread out on the table" />
             <h2>Social Media Marketing</h2>
             <p>
                 Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.
             </p>
-        </div>
-    </section>
+        </section>
+    </main>
     <div class="benefits">
         <div class="benefit-lead">
             <h3>Lead Generation</h3>
