--- a/index.html
+++ b/index.html
@@ -54,32 +54,32 @@
     <aside>
         <div class="benefit">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" alt="" />
+            <img src="./assets/images/lead-generation.png" alt="A machine gear halfway down a funnel with a downward arrow leading to a circle with a dollar sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
         <div class="benefit">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" alt="" />
+            <img src="./assets/images/brand-awareness.png" alt="A person's torso with a lightbulb with lines indicating light illuminating from it, in the place of their head" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
         <div class="benefit">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png" alt="">
+            <img src="./assets/images/cost-management.png" alt="A machine gear surrounded by dollar signs inside circles">
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
         </div>
     </aside>
-    <div class="footer">
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
         <p>
             &copy; 2019 Horiseon Social Solution Services, Inc.
         </p>
-    </div>
+    </footer>
 </body>
 
 </html>
